change @astrojs/node for @astrojs/vercel

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.5.2",
+    "@astrojs/vercel": "^9.0.4",
     "astro": "^5.16.11",
     "web-push": "^3.6.7"
   },
